# tinytorch

./: .gitignore  Makefile  README.md  interface.ipynb  test.py  test_matmul  train-mnist-torch.py  train_mnist.py
bind/: CMakeLists.txt  data-bind.cpp  helper-bind.cpp  layers-bind.cpp  optim-bind.cpp
cuda/: common.h  conv.cu  global-pooling.cu  mm.cu  relu.cu  sgd.cu  softmax-ce.cu  tensor-utils.cu
cuda/archive/: conv.cu  mm.cu
cuda/forward/: convolution.cu
docs/: IMPLEMENTATION_ADDITIONS.md
include/: autograd.h  backward.h  common.cuh  functional.h  nn.h  optim.h  tensor.c  tensor.cpp  tensor.h
mnist-dataloader/: mnist.cpp  mnist.h
src/autograd/: backward.cpp
src/functional/: conv.cpp  cross-entropy.cpp  global-pooling.cpp  linear.cpp  relu.cpp
src/nn/: conv.cpp  cross-entropy.cpp  global-pooling.cpp  linear.cpp  relu.cpp
src/optim/: sgd.cpp
tests/: test_conv.c
tests/autograd/: autograd-test.cpp  exhaustive-autograd-test.cpp
tests/conv/: a.out  helper.py  test_conv.c  torch_conv.py
tests/integration/: full-pipeline-sgd-test.cpp  full-pipeline-test.cpp
tests/matmul/: test_matmul.c  torch_matmul.py
tests/model-definition/: compare.py  model-def.cpp
tests/scripts/: torch_conv.py
tests/wrapper/: conv-wrapper.cpp  cross-entropy-wrapper.cpp  global-pooling-wrapper.cpp  linear-bias-wrapper.cpp  linear-wrapper.cpp  relu-wrapper.cpp  sgd-wrapper.cpp
tinytorch/: .gitignore
tinytorch/cuda/forward/: a.out  convolution.cu
